// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`autolink.md 1`] = `
<https://www.example.com>
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<https://www.example.com>

`;

exports[`autolink.md 2`] = `
<https://www.example.com>
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<https://www.example.com>

`;

exports[`entity.md 1`] = `
[Test](http://localhost:8080/test?language=DE&currency=EUR)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
[Test](http://localhost:8080/test?language=DE&currency=EUR)

`;

exports[`entity.md 2`] = `
[Test](http://localhost:8080/test?language=DE&currency=EUR)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
[Test](http://localhost:8080/test?language=DE&currency=EUR)

`;

exports[`long.md 1`] = `
[podium context](https://github.schibsted.io/finn/podium/tree/master/packages/podium-context)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
[podium context](https://github.schibsted.io/finn/podium/tree/master/packages/podium-context)

`;

exports[`long.md 2`] = `
[podium context](https://github.schibsted.io/finn/podium/tree/master/packages/podium-context)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
[podium context](https://github.schibsted.io/finn/podium/tree/master/packages/podium-context)

`;

exports[`simple.md 1`] = `
[hello](#world)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
[hello](#world)

`;

exports[`simple.md 2`] = `
[hello](#world)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
[hello](#world)

`;

exports[`title.md 1`] = `
[hello](#world "title")
[hello](#world 'title')
[hello](#world (title))

[a](https://example.com "\\"")
[a](https://example.com '\\"')
[a](https://example.com (\\"))

[a](https://example.com "\\'")
[a](https://example.com '\\'')
[a](https://example.com (\\'))

[a](https://example.com "\\'")
[a](https://example.com '\\)')
[a](https://example.com (\\)))

<!-- magical incantations -->

[a](https://example.com "\\"')")
[a](https://example.com '"\\')')
[a](https://example.com ("'\\)))

<!-- mis-parsing, \`\\\` are missing: -->

[a](https://example.com "\\\\\\"")
[a](https://example.com '\\\\\\'')
[a](https://example.com (\\\\\\)))

[a](https://example.com "\\\\'")
[a](https://example.com '\\\\"')
[a](https://example.com (\\\\"))
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
[hello](#world "title") [hello](#world "title") [hello](#world "title")

[a](https://example.com '"') [a](https://example.com '"')
[a](https://example.com '"')

[a](https://example.com "'") [a](https://example.com "'")
[a](https://example.com "'")

[a](https://example.com "'") [a](https://example.com ")")
[a](https://example.com ")")

<!-- magical incantations -->

[a](https://example.com "\\"')") [a](https://example.com "\\"')")
[a](https://example.com "\\"')")

<!-- mis-parsing, \`\\\` are missing: -->

[a](https://example.com '"') [a](https://example.com "'")
[a](https://example.com ")")

[a](https://example.com "'") [a](https://example.com '"')
[a](https://example.com '"')

`;

exports[`title.md 2`] = `
[hello](#world "title")
[hello](#world 'title')
[hello](#world (title))

[a](https://example.com "\\"")
[a](https://example.com '\\"')
[a](https://example.com (\\"))

[a](https://example.com "\\'")
[a](https://example.com '\\'')
[a](https://example.com (\\'))

[a](https://example.com "\\'")
[a](https://example.com '\\)')
[a](https://example.com (\\)))

<!-- magical incantations -->

[a](https://example.com "\\"')")
[a](https://example.com '"\\')')
[a](https://example.com ("'\\)))

<!-- mis-parsing, \`\\\` are missing: -->

[a](https://example.com "\\\\\\"")
[a](https://example.com '\\\\\\'')
[a](https://example.com (\\\\\\)))

[a](https://example.com "\\\\'")
[a](https://example.com '\\\\"')
[a](https://example.com (\\\\"))
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
[hello](#world 'title') [hello](#world 'title') [hello](#world 'title')

[a](https://example.com '"') [a](https://example.com '"')
[a](https://example.com '"')

[a](https://example.com "'") [a](https://example.com "'")
[a](https://example.com "'")

[a](https://example.com "'") [a](https://example.com ')')
[a](https://example.com ')')

<!-- magical incantations -->

[a](https://example.com '"\\')') [a](https://example.com '"\\')')
[a](https://example.com '"\\')')

<!-- mis-parsing, \`\\\` are missing: -->

[a](https://example.com '"') [a](https://example.com "'")
[a](https://example.com ')')

[a](https://example.com "'") [a](https://example.com '"')
[a](https://example.com '"')

`;

exports[`url.md 1`] = `
https://www.example.com/
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
https://www.example.com/

`;

exports[`url.md 2`] = `
https://www.example.com/
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
https://www.example.com/

`;
